cc_library(
    name = "sys_local",
    srcs = [
        "sys_local.h",
    ],
    visibility = [
        "//code/client:__pkg__",
        "//code/sdl:__pkg__",
    ],
    deps = [
        "//code/qcommon",
        "//third_party/sdl",
    ],
)

cc_library(
    name = "sys_local-dedicated",
    srcs = [
        "sys_local.h",
    ],
    defines = [
        "DEDICATED",
    ],
    visibility = [
        "//code/client:__pkg__",
        "//code/sdl:__pkg__",
    ],
    deps = [
        "//code/qcommon",
    ],
)

cc_library(
    name = "sys_unix-dedicated",
    srcs = ["sys_unix.c"],
    defines = ["DEDICATED"],
    deps = [
        ":sys_local-dedicated",
        "//code/qcommon",
    ],
)

cc_library(
    name = "sys_unix",
    srcs = ["sys_unix.c"],
    deps = [
        ":sys_local",
        "//code/qcommon",
    ],
)

objc_library(
    name = "sys_osx",
    non_arc_srcs = [
        "sys_osx.m",
    ],
    deps = [
        ":sys_local",
        "//code/qcommon",
        "//code/qcommon:shared_api",
    ],
)

objc_library(
    name = "sys_osx-dedicated",
    defines = ["DEDICATED"],
    non_arc_srcs = [
        "sys_osx.m",
    ],
    deps = [
        ":sys_local-dedicated",
        "//code/qcommon",
        "//code/qcommon:shared_api",
    ],
)

cc_library(
    name = "main",
    srcs = [
        "con_log.c",
        "sys_main.c",
    ],
    hdrs = [
        "sys_loadlib.h",
    ],
    visibility = ["//code:__subpackages__"],
    deps = [
        ":sys_local",
        "//code/qcommon",
        "//code/qcommon:shared_api",
        "//third_party/sdl",
    ],
)

cc_library(
    name = "main-dedicated",
    srcs = [
        "sys_main.c",
    ],
    hdrs = [
        "sys_loadlib.h",
    ],
    defines = [
        "DEDICATED",
    ],
    deps = [
        ":sys_local-dedicated",
        "//code/qcommon",
        "//code/qcommon:shared_api",
    ],
)
