load("//build_defs:rules.bzl", "ENGINE_DEFINES", "SERVER_ONLY_ENGINE_DEFINES")

cc_library(
    name = "sys_local",
    srcs = ["sys_local.h"],
    defines = ENGINE_DEFINES,
    visibility = [
        "//code/client:__pkg__",
        "//code/sdl:__pkg__",
    ],
    deps = [
        "//code/qcommon",
        "//third_party/sdl",
    ],
)

cc_library(
    name = "sys_local-dedicated",
    srcs = ["sys_local.h"],
    defines = SERVER_ONLY_ENGINE_DEFINES,
    visibility = [
        "//code/client:__pkg__",
        "//code/sdl:__pkg__",
        "//code/server:__pkg__",
    ],
    deps = ["//code/qcommon"],
)

cc_library(
    name = "sys_unix-dedicated",
    srcs = ["sys_unix.c"],
    defines = SERVER_ONLY_ENGINE_DEFINES,
    visibility = ["//code/server:__pkg__"],
    deps = [
        ":sys_local-dedicated",
        "//code/qcommon",
    ],
)

cc_library(
    name = "sys_unix",
    srcs = ["sys_unix.c"],
    defines = ENGINE_DEFINES,
    visibility = ["//code/client:__pkg__"],
    deps = [
        ":sys_local",
        "//code/qcommon",
    ],
)

objc_library(
    name = "sys_osx",
    defines = ENGINE_DEFINES,
    linkopts = ["-framework Cocoa"],
    non_arc_srcs = ["sys_osx.m"],
    visibility = ["//code/client:__pkg__"],
    deps = [
        ":sys_local",
        "//code/qcommon",
        "//code/qcommon:shared_api",
    ],
)

objc_library(
    name = "sys_osx-dedicated",
    defines = SERVER_ONLY_ENGINE_DEFINES,
    non_arc_srcs = ["sys_osx.m"],
    visibility = ["//code/server:__pkg__"],
    deps = [
        ":sys_local-dedicated",
        "//code/qcommon",
        "//code/qcommon:shared_api",
    ],
)

cc_library(
    name = "main",
    srcs = [
        "con_log.c",
        "sys_main.c",
    ],
    hdrs = ["sys_loadlib.h"],
    defines = ENGINE_DEFINES,
    visibility = ["//code:__subpackages__"],
    deps = [
        ":sys_local",
        "//code/qcommon",
        "//code/qcommon:shared_api",
        "//third_party/sdl",
    ],
)

cc_library(
    name = "main-dedicated",
    srcs = [
        "con_log.c",
        "sys_main.c",
    ],
    hdrs = ["sys_loadlib.h"],
    defines = SERVER_ONLY_ENGINE_DEFINES,
    visibility = ["//code/server:__pkg__"],
    deps = [
        ":sys_local-dedicated",
        "//code/qcommon",
        "//code/qcommon:shared_api",
    ],
)
