# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_cc//cc:defs.bzl", "cc_library", "objc_library")
load("//build_defs:rules.bzl", "ENGINE_DEFINES", "SERVER_ONLY_ENGINE_DEFINES")

cc_library(
    name = "sys_local",
    srcs = ["sys_local.h"],
    defines = ENGINE_DEFINES,
    visibility = [
        "//code/client:__pkg__",
        "//code/sdl:__pkg__",
    ],
    deps = [
        "//code/qcommon",
        "//third_party/sdl",
    ],
)

cc_library(
    name = "sys_local-dedicated",
    srcs = ["sys_local.h"],
    defines = SERVER_ONLY_ENGINE_DEFINES,
    visibility = [
        "//code/client:__pkg__",
        "//code/sdl:__pkg__",
        "//code/server:__pkg__",
    ],
    deps = ["//code/qcommon"],
)

cc_library(
    name = "sys_unix-dedicated",
    srcs = ["sys_unix.c"],
    defines = SERVER_ONLY_ENGINE_DEFINES,
    visibility = ["//code/server:__pkg__"],
    deps = [
        ":sys_local-dedicated",
        "//code/qcommon",
    ],
)

cc_library(
    name = "sys_unix",
    srcs = ["sys_unix.c"],
    defines = ENGINE_DEFINES,
    visibility = ["//code/client:__pkg__"],
    deps = [
        ":sys_local",
        "//code/qcommon",
    ],
)

objc_library(
    name = "sys_osx",
    defines = ENGINE_DEFINES,
    linkopts = ["-framework Cocoa"],
    non_arc_srcs = ["sys_osx.m"],
    visibility = ["//code/client:__pkg__"],
    deps = [
        ":sys_local",
        "//code/qcommon",
        "//code/qcommon:shared_api",
    ],
)

objc_library(
    name = "sys_osx-dedicated",
    defines = SERVER_ONLY_ENGINE_DEFINES,
    non_arc_srcs = ["sys_osx.m"],
    visibility = ["//code/server:__pkg__"],
    deps = [
        ":sys_local-dedicated",
        "//code/qcommon",
        "//code/qcommon:shared_api",
    ],
)

cc_library(
    name = "main",
    srcs = [
        "con_log.c",
        "sys_main.c",
    ],
    hdrs = ["sys_loadlib.h"],
    defines = ENGINE_DEFINES,
    visibility = ["//code:__subpackages__"],
    deps = [
        ":sys_local",
        "//code/qcommon",
        "//code/qcommon:shared_api",
        "//third_party/sdl",
    ],
)

cc_library(
    name = "main-dedicated",
    srcs = [
        "con_log.c",
        "sys_main.c",
    ],
    hdrs = ["sys_loadlib.h"],
    defines = SERVER_ONLY_ENGINE_DEFINES,
    visibility = ["//code/server:__pkg__"],
    deps = [
        ":sys_local-dedicated",
        "//code/qcommon",
        "//code/qcommon:shared_api",
    ],
)
