load("//build_defs:assets.bzl", _convert_tga_to_png = "convert_tga_to_png")
load("//third_party/content:metadata.bzl", _PAK_DATA = "PAK_DATA")

_convert_tga_to_png(name = "q3a_baseq3_pak0")

_convert_tga_to_png(name = "q3a_baseq3_pak2")

_convert_tga_to_png(name = "q3a_baseq3_pak4")

_convert_tga_to_png(name = "q3a_baseq3_pak6")

_convert_tga_to_png(name = "QuakeArenaArcade_baseq3")

_convert_tga_to_png(name = "pak9hqq36")

filegroup(
    name = "material_assets",
    srcs = [
        "scripts/base.shader",
        "scripts/base_button.shader",
        "scripts/base_floor.shader",
        "scripts/base_light.shader",
        "scripts/base_object.shader",
        "scripts/base_support.shader",
        "scripts/base_trim.shader",
        "scripts/base_wall.shader",
        "scripts/common.shader",
        "scripts/ctf.shader",
        "scripts/eerie.shader",
        "scripts/explode1.shader",
        "scripts/gfx.shader",
        "scripts/gothic_block.shader",
        "scripts/gothic_floor.shader",
        "scripts/gothic_light.shader",
        "scripts/gothic_trim.shader",
        "scripts/gothic_wall.shader",
        "scripts/hell.shader",
        "scripts/lightningnew.shader",
        "scripts/liquid.shader",
        "scripts/menu.shader",
        "scripts/models.shader",
        "scripts/organics.shader",
        "scripts/q3a-1.32.shader",
        "scripts/q3a-1.32e.shader",
        "scripts/sfx.shader",
        "scripts/shrine.shader",
        "scripts/skin.shader",
        "scripts/sky.shader",
        "scripts/test.shader",
        "scripts/tim.shader",
    ],
    visibility = ["//visibility:public"],
)
