filegroup(
    name = "material_assets",
    srcs = [
        "scripts/base.shader",
        "scripts/base_button.shader",
        "scripts/base_floor.shader",
        "scripts/base_light.shader",
        "scripts/base_object.shader",
        "scripts/base_support.shader",
        "scripts/base_trim.shader",
        "scripts/base_wall.shader",
        "scripts/common.shader",
        "scripts/ctf.shader",
        "scripts/eerie.shader",
        "scripts/explode1.shader",
        "scripts/gfx.shader",
        "scripts/gothic_block.shader",
        "scripts/gothic_floor.shader",
        "scripts/gothic_light.shader",
        "scripts/gothic_trim.shader",
        "scripts/gothic_wall.shader",
        "scripts/hell.shader",
        "scripts/lightningnew.shader",
        "scripts/liquid.shader",
        "scripts/menu.shader",
        "scripts/models.shader",
        "scripts/organics.shader",
        "scripts/q3a-1.32.shader",
        "scripts/q3a-1.32e.shader",
        "scripts/sfx.shader",
        "scripts/shrine.shader",
        "scripts/skin.shader",
        "scripts/sky.shader",
        "scripts/test.shader",
        "scripts/tim.shader",
    ],
    visibility = ["//visibility:public"],
)
