# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

filegroup(
    name = "material_assets",
    srcs = [
        "scripts/base.shader",
        "scripts/base_button.shader",
        "scripts/base_floor.shader",
        "scripts/base_light.shader",
        "scripts/base_object.shader",
        "scripts/base_support.shader",
        "scripts/base_trim.shader",
        "scripts/base_wall.shader",
        "scripts/common.shader",
        "scripts/ctf.shader",
        "scripts/eerie.shader",
        "scripts/explode1.shader",
        "scripts/gfx.shader",
        "scripts/gothic_block.shader",
        "scripts/gothic_floor.shader",
        "scripts/gothic_light.shader",
        "scripts/gothic_trim.shader",
        "scripts/gothic_wall.shader",
        "scripts/hell.shader",
        "scripts/lightningnew.shader",
        "scripts/liquid.shader",
        "scripts/menu.shader",
        "scripts/models.shader",
        "scripts/organics.shader",
        "scripts/q3a-1.32.shader",
        "scripts/q3a-1.32e.shader",
        "scripts/sfx.shader",
        "scripts/shrine.shader",
        "scripts/skin.shader",
        "scripts/sky.shader",
        "scripts/tim.shader",
    ],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "skin_assets",
    srcs = [
        "models/players/anarki/head_blue.skin",
        "models/players/anarki/head_default.skin",
        "models/players/anarki/head_red.skin",
        "models/players/anarki/lower_blue.skin",
        "models/players/anarki/lower_default.skin",
        "models/players/anarki/lower_red.skin",
        "models/players/anarki/upper_blue.skin",
        "models/players/anarki/upper_default.skin",
        "models/players/anarki/upper_red.skin",
        "models/players/biker/head_blue.skin",
        "models/players/biker/head_cadavre.skin",
        "models/players/biker/head_default.skin",
        "models/players/biker/head_hossman.skin",
        "models/players/biker/head_red.skin",
        "models/players/biker/head_slammer.skin",
        "models/players/biker/head_stroggo.skin",
        "models/players/biker/lower_blue.skin",
        "models/players/biker/lower_cadavre.skin",
        "models/players/biker/lower_default.skin",
        "models/players/biker/lower_hossman.skin",
        "models/players/biker/lower_red.skin",
        "models/players/biker/lower_slammer.skin",
        "models/players/biker/lower_stroggo.skin",
        "models/players/biker/upper_blue.skin",
        "models/players/biker/upper_cadavre.skin",
        "models/players/biker/upper_default.skin",
        "models/players/biker/upper_hossman.skin",
        "models/players/biker/upper_red.skin",
        "models/players/biker/upper_slammer.skin",
        "models/players/biker/upper_stroggo.skin",
        "models/players/bitterman/head_blue.skin",
        "models/players/bitterman/head_default.skin",
        "models/players/bitterman/head_red.skin",
        "models/players/bitterman/lower_blue.skin",
        "models/players/bitterman/lower_default.skin",
        "models/players/bitterman/lower_red.skin",
        "models/players/bitterman/upper_blue.skin",
        "models/players/bitterman/upper_default.skin",
        "models/players/bitterman/upper_red.skin",
        "models/players/bones/head_blue.skin",
        "models/players/bones/head_bones.skin",
        "models/players/bones/head_default.skin",
        "models/players/bones/head_red.skin",
        "models/players/bones/lower_blue.skin",
        "models/players/bones/lower_bones.skin",
        "models/players/bones/lower_default.skin",
        "models/players/bones/lower_red.skin",
        "models/players/bones/upper_blue.skin",
        "models/players/bones/upper_bones.skin",
        "models/players/bones/upper_default.skin",
        "models/players/bones/upper_red.skin",
        "models/players/brandon/head_default.skin",
        "models/players/brandon/lower_default.skin",
        "models/players/brandon/upper_default.skin",
        "models/players/carmack/head_default.skin",
        "models/players/carmack/lower_default.skin",
        "models/players/carmack/upper_default.skin",
        "models/players/cash/head_default.skin",
        "models/players/cash/lower_default.skin",
        "models/players/cash/upper_default.skin",
        "models/players/crash/head_blue.skin",
        "models/players/crash/head_default.skin",
        "models/players/crash/head_red.skin",
        "models/players/crash/lower_blue.skin",
        "models/players/crash/lower_default.skin",
        "models/players/crash/lower_red.skin",
        "models/players/crash/upper_blue.skin",
        "models/players/crash/upper_default.skin",
        "models/players/crash/upper_red.skin",
        "models/players/doom/head_blue.skin",
        "models/players/doom/head_default.skin",
        "models/players/doom/head_phobos.skin",
        "models/players/doom/head_red.skin",
        "models/players/doom/lower_blue.skin",
        "models/players/doom/lower_default.skin",
        "models/players/doom/lower_phobos.skin",
        "models/players/doom/lower_red.skin",
        "models/players/doom/upper_blue.skin",
        "models/players/doom/upper_default.skin",
        "models/players/doom/upper_phobos.skin",
        "models/players/doom/upper_red.skin",
        "models/players/grunt/head_blue.skin",
        "models/players/grunt/head_default.skin",
        "models/players/grunt/head_red.skin",
        "models/players/grunt/head_stripe.skin",
        "models/players/grunt/lower_blue.skin",
        "models/players/grunt/lower_default.skin",
        "models/players/grunt/lower_red.skin",
        "models/players/grunt/lower_stripe.skin",
        "models/players/grunt/upper_blue.skin",
        "models/players/grunt/upper_default.skin",
        "models/players/grunt/upper_red.skin",
        "models/players/grunt/upper_stripe.skin",
        "models/players/hunter/head_blue.skin",
        "models/players/hunter/head_default.skin",
        "models/players/hunter/head_harpy.skin",
        "models/players/hunter/head_red.skin",
        "models/players/hunter/lower_blue.skin",
        "models/players/hunter/lower_default.skin",
        "models/players/hunter/lower_harpy.skin",
        "models/players/hunter/lower_red.skin",
        "models/players/hunter/upper_blue.skin",
        "models/players/hunter/upper_default.skin",
        "models/players/hunter/upper_harpy.skin",
        "models/players/hunter/upper_red.skin",
        "models/players/keel/head_blue.skin",
        "models/players/keel/head_default.skin",
        "models/players/keel/head_red.skin",
        "models/players/keel/lower_blue.skin",
        "models/players/keel/lower_default.skin",
        "models/players/keel/lower_red.skin",
        "models/players/keel/upper_blue.skin",
        "models/players/keel/upper_default.skin",
        "models/players/keel/upper_red.skin",
        "models/players/klesk/head_blue.skin",
        "models/players/klesk/head_default.skin",
        "models/players/klesk/head_flisk.skin",
        "models/players/klesk/head_red.skin",
        "models/players/klesk/lower_blue.skin",
        "models/players/klesk/lower_default.skin",
        "models/players/klesk/lower_flisk.skin",
        "models/players/klesk/lower_red.skin",
        "models/players/klesk/upper_blue.skin",
        "models/players/klesk/upper_default.skin",
        "models/players/klesk/upper_flisk.skin",
        "models/players/klesk/upper_red.skin",
        "models/players/lucy/head_angel.skin",
        "models/players/lucy/head_blue.skin",
        "models/players/lucy/head_default.skin",
        "models/players/lucy/head_red.skin",
        "models/players/lucy/lower_angel.skin",
        "models/players/lucy/lower_blue.skin",
        "models/players/lucy/lower_default.skin",
        "models/players/lucy/lower_red.skin",
        "models/players/lucy/upper_angel.skin",
        "models/players/lucy/upper_blue.skin",
        "models/players/lucy/upper_default.skin",
        "models/players/lucy/upper_red.skin",
        "models/players/major/head_blue.skin",
        "models/players/major/head_daemia.skin",
        "models/players/major/head_default.skin",
        "models/players/major/head_red.skin",
        "models/players/major/lower_blue.skin",
        "models/players/major/lower_daemia.skin",
        "models/players/major/lower_default.skin",
        "models/players/major/lower_red.skin",
        "models/players/major/upper_blue.skin",
        "models/players/major/upper_daemia.skin",
        "models/players/major/upper_default.skin",
        "models/players/major/upper_red.skin",
        "models/players/mynx/head_blue.skin",
        "models/players/mynx/head_default.skin",
        "models/players/mynx/head_red.skin",
        "models/players/mynx/lower_blue.skin",
        "models/players/mynx/lower_default.skin",
        "models/players/mynx/lower_red.skin",
        "models/players/mynx/upper_blue.skin",
        "models/players/mynx/upper_default.skin",
        "models/players/mynx/upper_red.skin",
        "models/players/orbb/head_blue.skin",
        "models/players/orbb/head_default.skin",
        "models/players/orbb/head_red.skin",
        "models/players/orbb/lower_blue.skin",
        "models/players/orbb/lower_default.skin",
        "models/players/orbb/lower_red.skin",
        "models/players/orbb/upper_blue.skin",
        "models/players/orbb/upper_default.skin",
        "models/players/orbb/upper_red.skin",
        "models/players/paulj/head_default.skin",
        "models/players/paulj/lower_default.skin",
        "models/players/paulj/upper_default.skin",
        "models/players/ranger/head_blue.skin",
        "models/players/ranger/head_default.skin",
        "models/players/ranger/head_red.skin",
        "models/players/ranger/head_wrack.skin",
        "models/players/ranger/lower_blue.skin",
        "models/players/ranger/lower_default.skin",
        "models/players/ranger/lower_red.skin",
        "models/players/ranger/lower_wrack.skin",
        "models/players/ranger/upper_blue.skin",
        "models/players/ranger/upper_default.skin",
        "models/players/ranger/upper_red.skin",
        "models/players/ranger/upper_wrack.skin",
        "models/players/razor/head_blue.skin",
        "models/players/razor/head_default.skin",
        "models/players/razor/head_id.skin",
        "models/players/razor/head_patriot.skin",
        "models/players/razor/head_red.skin",
        "models/players/razor/lower_blue.skin",
        "models/players/razor/lower_default.skin",
        "models/players/razor/lower_id.skin",
        "models/players/razor/lower_patriot.skin",
        "models/players/razor/lower_red.skin",
        "models/players/razor/upper_blue.skin",
        "models/players/razor/upper_default.skin",
        "models/players/razor/upper_id.skin",
        "models/players/razor/upper_patriot.skin",
        "models/players/razor/upper_red.skin",
        "models/players/sarge/head_blue.skin",
        "models/players/sarge/head_default.skin",
        "models/players/sarge/head_krusade.skin",
        "models/players/sarge/head_red.skin",
        "models/players/sarge/head_roderic.skin",
        "models/players/sarge/lower_blue.skin",
        "models/players/sarge/lower_default.skin",
        "models/players/sarge/lower_krusade.skin",
        "models/players/sarge/lower_red.skin",
        "models/players/sarge/lower_roderic.skin",
        "models/players/sarge/upper_blue.skin",
        "models/players/sarge/upper_default.skin",
        "models/players/sarge/upper_krusade.skin",
        "models/players/sarge/upper_red.skin",
        "models/players/sarge/upper_roderic.skin",
        "models/players/slash/head_blue.skin",
        "models/players/slash/head_default.skin",
        "models/players/slash/head_grrl.skin",
        "models/players/slash/head_red.skin",
        "models/players/slash/head_yuriko.skin",
        "models/players/slash/lower_blue.skin",
        "models/players/slash/lower_default.skin",
        "models/players/slash/lower_grrl.skin",
        "models/players/slash/lower_red.skin",
        "models/players/slash/lower_yuriko.skin",
        "models/players/slash/upper_blue.skin",
        "models/players/slash/upper_default.skin",
        "models/players/slash/upper_grrl.skin",
        "models/players/slash/upper_red.skin",
        "models/players/slash/upper_yuriko.skin",
        "models/players/sorlag/head_blue.skin",
        "models/players/sorlag/head_default.skin",
        "models/players/sorlag/head_red.skin",
        "models/players/sorlag/lower_blue.skin",
        "models/players/sorlag/lower_default.skin",
        "models/players/sorlag/lower_red.skin",
        "models/players/sorlag/upper_blue.skin",
        "models/players/sorlag/upper_default.skin",
        "models/players/sorlag/upper_red.skin",
        "models/players/tankjr/head_blue.skin",
        "models/players/tankjr/head_default.skin",
        "models/players/tankjr/head_red.skin",
        "models/players/tankjr/lower_blue.skin",
        "models/players/tankjr/lower_default.skin",
        "models/players/tankjr/lower_red.skin",
        "models/players/tankjr/upper_blue.skin",
        "models/players/tankjr/upper_default.skin",
        "models/players/tankjr/upper_red.skin",
        "models/players/tim/head_default.skin",
        "models/players/tim/head_red.skin",
        "models/players/tim/lower_default.skin",
        "models/players/tim/lower_red.skin",
        "models/players/tim/upper_default.skin",
        "models/players/tim/upper_red.skin",
        "models/players/uriel/head_blue.skin",
        "models/players/uriel/head_default.skin",
        "models/players/uriel/head_red.skin",
        "models/players/uriel/head_zael.skin",
        "models/players/uriel/lower_blue.skin",
        "models/players/uriel/lower_default.skin",
        "models/players/uriel/lower_red.skin",
        "models/players/uriel/lower_zael.skin",
        "models/players/uriel/upper_blue.skin",
        "models/players/uriel/upper_default.skin",
        "models/players/uriel/upper_red.skin",
        "models/players/uriel/upper_zael.skin",
        "models/players/visor/head_blue.skin",
        "models/players/visor/head_default.skin",
        "models/players/visor/head_gorre.skin",
        "models/players/visor/head_red.skin",
        "models/players/visor/lower_blue.skin",
        "models/players/visor/lower_default.skin",
        "models/players/visor/lower_gorre.skin",
        "models/players/visor/lower_red.skin",
        "models/players/visor/upper_blue.skin",
        "models/players/visor/upper_default.skin",
        "models/players/visor/upper_gorre.skin",
        "models/players/visor/upper_red.skin",
        "models/players/xaero/head_blue.skin",
        "models/players/xaero/head_default.skin",
        "models/players/xaero/head_red.skin",
        "models/players/xaero/lower_blue.skin",
        "models/players/xaero/lower_default.skin",
        "models/players/xaero/lower_red.skin",
        "models/players/xaero/upper_blue.skin",
        "models/players/xaero/upper_default.skin",
        "models/players/xaero/upper_red.skin",
        "models/players/xian/head_default.skin",
        "models/players/xian/lower_default.skin",
        "models/players/xian/upper_default.skin",
    ],
    visibility = ["//visibility:public"],
)
