load("//build_defs:assets.bzl", _convert_tga_to_png = "convert_tga_to_png")
load("//third_party/content:metadata.bzl", _PAK_DATA = "PAK_DATA")

_convert_tga_to_png(name = "q3a_missionpack_pak0")

_convert_tga_to_png(name = "QuakeArenaArcade_teamarena")

cc_library(
    name = "ui",
    hdrs = ["ui/menudef.h"],
    includes = ["."],
    visibility = [
        "//code/cgame:__pkg__",
        "//code/game:__pkg__",
        "//code/ui:__pkg__",
    ],
)

filegroup(
    name = "ui_assets",
    srcs = [
        "ui/addfilter.menu",
        "ui/cinematicmenu.menu",
        "ui/connect.menu",
        "ui/controls.menu",
        "ui/createfavorite.menu",
        "ui/createserver.menu",
        "ui/credit.menu",
        "ui/default.menu",
        "ui/demo.menu",
        "ui/demo_quit.menu",
        "ui/endofgame.menu",
        "ui/error.menu",
        "ui/fight.menu",
        "ui/filter.menu",
        "ui/findplayer.menu",
        "ui/help.menu",
        "ui/hud.menu",
        "ui/hud.txt",
        "ui/hud2.txt",
        "ui/ingame.menu",
        "ui/ingame.txt",
        "ui/ingame_about.menu",
        "ui/ingame_addbot.menu",
        "ui/ingame_callvote.menu",
        "ui/ingame_controls.menu",
        "ui/ingame_join.menu",
        "ui/ingame_leave.menu",
        "ui/ingame_options.menu",
        "ui/ingame_orders.menu",
        "ui/ingame_player.menu",
        "ui/ingame_system.menu",
        "ui/ingame_vote.menu",
        "ui/joinserver.menu",
        "ui/main.menu",
        "ui/menudef.h",
        "ui/menus.txt",
        "ui/min_hud.menu",
        "ui/mod.menu",
        "ui/options.menu",
        "ui/ordershelp.menu",
        "ui/password.menu",
        "ui/player.menu",
        "ui/powerup.menu",
        "ui/quake3.menu",
        "ui/quit.menu",
        "ui/quitcredit.menu",
        "ui/resetscore.menu",
        "ui/score.menu",
        "ui/serverinfo.menu",
        "ui/setup.menu",
        "ui/skirmish.menu",
        "ui/system.menu",
        "ui/teamscore.menu",
        "ui/vid_restart.menu",
    ],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "material_assets",
    srcs = [
        "scripts/base_floor.shader",
        "scripts/base_floor2.shader",
        "scripts/base_light.shader",
        "scripts/base_wall.shader",
        "scripts/base_wall2.shader",
        "scripts/common.shader",
        "scripts/ctf.shader",
        "scripts/ctf2.shader",
        "scripts/flayer.shader",
        "scripts/gallery.shader",
        "scripts/gfx.shader",
        "scripts/gfx2.shader",
        "scripts/gothic_floor2.shader",
        "scripts/gothic_trim.shader",
        "scripts/gothic_wall.shader",
        "scripts/jim_test.shader",
        "scripts/jk_dm1.shader",
        "scripts/jk_tourney1.shader",
        "scripts/liquid.shader",
        "scripts/liquid2.shader",
        "scripts/models.shader",
        "scripts/models2.shader",
        "scripts/models3.shader",
        "scripts/multiplant.shader",
        "scripts/museum.shader",
        "scripts/nateleaf.shader",
        "scripts/nateshad.shader",
        "scripts/outdoors.shader",
        "scripts/proto2.shader",
        "scripts/q3ta.shader",
        "scripts/sfx.shader",
        "scripts/sfx2.shader",
        "scripts/sky.shader",
        "scripts/sky2.shader",
        "scripts/stone2.shader",
        "scripts/team.shader",
        "scripts/terrain.shader",
        "scripts/tim.shader",
        "scripts/ui.shader",
        "scripts/ui_hud.shader",
        "scripts/ui_kc.shader",
        "scripts/web.shader",
        "scripts/work_tri1.shader",
    ],
    visibility = ["//visibility:public"],
)
